added more content to the layout and created a stylesheet

--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <title>Awesome Books</title>
   </head>
   <body>
+    <header>
     <h1>Awesome Books</h1>
+    <ul class="nav-links">
+      <li><a id="home" href="#"></a>List</li>
+      <li><a id="form-container" href="#"></a>Add New</li>
+      <li><a id="contact" href="#"></a>Contact</li>
+    </ul>
+    </header>
+
+    <div><p class="date"></p></div>
+
+    <section>
+      <h2>All Awesome books</h2>
+      <div class="storedbooks">
+        
+      </div>
+    </section>
+
+    <section>
     <div class="container"></div>
+    </section>
+
+    <section>
+      <div id="contact-info">
+        <h2>Contact Information</h2>
+        <div class="text">
+          <p class="foooter-p1">Do you have any questions or you just want to say "Hello"?</p>
+          <p class="foooter-p1">You can reach out to us!</p>
+        </div>
+        <ul>
+          <li>Our email: email@gmail.com</li>
+          <li>Our phone number: 0123456789</li>
+          <li>Our address: Streetname 22, 84503 City, Country</li>
+        </ul>
+      </div>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
