change the function NewBooks to a class and added a constructor

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
       <h2>All Awesome books</h2>
       <div class="storedbooks">
-        
+
       </div>
     </section>
 
@@ -30,7 +30,7 @@
     <div class="container"></div>
     </section>
 
-    <section>
+    <section class="info">
       <div id="contact-info">
         <h2>Contact Information</h2>
         <div class="text">
