--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
       </div>
     </section>
+    <main id="main">
+      <div class="books"></div>
+      <form method="get">
+        <input id="title" type="text" placeholder="Title" required><br><br>
+        <input id="author" type="text" placeholder="Author" required><br><br>
+        <button type="submit" id="add">Add</button>
+      </form>
+    </main>
 
     <section>
     <div class="container"></div>
