Added contact to index html and styled main css

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <h1>Contact information</h1>
         <p>Reach out to us if you have any questions or just want to say "Hello"?</p>
         <ul>
-          <li>Our email: email@gmail.com</li>
-          <li>Our phone number: 0123456789</li>
-          <li>Our address: Streetname 22, 84503 City, Country</li>
+          <li>Email: email@gmail.com</li>
+          <li>Phone Number: 0123456789</li>
+          <li>Address: Streetname 22, 84503 City, Country</li>
         </ul>
       </div>
     </section>
     <footer>
-      <h3>Copyright 2020</h3>
+      <h3>Copyright 2021</h3>
     </footer>
     <script src="main.js"></script>
   </body>
